--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,9 @@
 name: autobuild
 
 on:
-  release:
-    types: [published]
+  push:
+    tags:
+      - "v*"
 
 jobs:
   mac:
@@ -14,7 +15,9 @@ jobs:
           - ui: cli
             clionly: --with-gui=no
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
+        with:
+          persist-credentials: false
       - name: install prerequisites
         env:
           HOMEBREW_NO_INSTALL_CLEANUP: 1
@@ -45,16 +48,11 @@ jobs:
       - name: build dist
         run: ./.github/workflows/make-mac-app.sh ${{ github.ref }}
         id: dist
-      - name: Upload Release Asset
-        id: upload-release-asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Release
+        uses: softprops/action-gh-release@v1
         with:
-          upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ./${{ steps.dist.outputs.archive }}
-          asset_name: ${{ steps.dist.outputs.archive }}
-          asset_content_type: application/zip
+          files: ${{ steps.dist.outputs.archive }}
+          draft: true
 
   win:
     runs-on: windows-latest
@@ -86,7 +84,9 @@ jobs:
       - name: git config
         run: git config --global core.autocrlf input
         shell: bash
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
+        with:
+          persist-credentials: false
       - name: configure
         run: ./configure ${{ matrix.clionly }}
       - name: make
@@ -111,21 +111,18 @@ jobs:
         run: |
           cd dist
           dvdisaster.exe --version
-      - name: Upload Release Asset
-        id: upload-release-asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Release
+        uses: softprops/action-gh-release@v1
         with:
-          upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ./${{ steps.dist.outputs.archive }}
-          asset_name: ${{ steps.dist.outputs.archive }}
-          asset_content_type: application/zip
+          files: ${{ steps.dist.outputs.archive }}
+          draft: true
 
   linux64-cli:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
+        with:
+          persist-credentials: false
       - name: install prerequisites
         run: sudo apt update && sudo apt install -y libglib2.0-dev ghostscript man
       - name: configure
@@ -140,21 +137,18 @@ jobs:
       - name: build dist
         run: ./.github/workflows/make-dist.sh ${{ github.ref }}
         id: dist
-      - name: Upload Release Asset
-        id: upload-release-asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Release
+        uses: softprops/action-gh-release@v1
         with:
-          upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ./${{ steps.dist.outputs.archive }}
-          asset_name: ${{ steps.dist.outputs.archive }}
-          asset_content_type: application/zip
+          files: ${{ steps.dist.outputs.archive }}
+          draft: true
 
   linux64-appimage:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
+        with:
+          persist-credentials: false
       - name: install prerequisites on host
         run: sudo apt-get update && sudo apt-get install -y fuse
       - name: docker
@@ -196,15 +190,10 @@ jobs:
         run: |
           chmod 755 dvdisaster*.AppImage && ./dvdisaster*.AppImage --version
           archive=$(ls -1 dvdisaster*.AppImage)
-          echo "::set-output name=archive::$archive"
+          echo "archive=$archive" >> "$GITHUB_OUTPUT"
           echo "appimage is <$archive>"
-      - name: Upload Release Asset
-        id: upload-release-asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Release
+        uses: softprops/action-gh-release@v1
         with:
-          upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ./${{ steps.dist.outputs.archive }}
-          asset_name: ${{ steps.dist.outputs.archive }}
-          asset_content_type: application/octet-stream
+          files: ${{ steps.dist.outputs.archive }}
+          draft: true
