fix: AppImage: add libgail, fixes #90 (#91)
* fix: AppImage: add libgail, fixes #90

* chore: push action-gh-release from v1 to v2

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,9 @@ jobs:
           set +x
           ./configure ${{ matrix.clionly }} --with-werror
       - name: make
-        run: make -j$(sysctl -n hw.ncpu || 2)
+        run: |
+          cat Makefile.config
+          make -j$(sysctl -n hw.ncpu || 2)
       - name: check executability
         run: ./dvdisaster --version
       - name: check executable (GUI)
@@ -49,7 +51,7 @@ jobs:
         run: ./.github/workflows/make-mac-app.sh ${{ github.ref }}
         id: dist
       - name: Release
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2
         with:
           files: ${{ steps.dist.outputs.archive }}
           draft: true
@@ -112,7 +114,7 @@ jobs:
           cd dist
           dvdisaster.exe --version
       - name: Release
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2
         with:
           files: ${{ steps.dist.outputs.archive }}
           draft: true
@@ -138,7 +140,7 @@ jobs:
         run: ./.github/workflows/make-dist.sh ${{ github.ref }}
         id: dist
       - name: Release
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2
         with:
           files: ${{ steps.dist.outputs.archive }}
           draft: true
@@ -156,7 +158,7 @@ jobs:
           mkdir -p /tmp/dist
           docker run --device /dev/fuse --privileged --name uu -d -v $PWD:/code -v /tmp/dist:/dist ubuntu:14.04 sleep 1800
       - name: install prerequisites in docker
-        run: docker exec uu sh -c 'sudo apt update && sudo apt install -y libglib2.0-dev ghostscript man libgtk2.0-dev gtk2-engines-pixbuf gtk2-engines pkg-config gnome-themes-standard fuse'
+        run: docker exec uu sh -c 'sudo apt update && sudo apt install -y libglib2.0-dev ghostscript man libgtk2.0-dev gtk2-engines-pixbuf gtk2-engines libgail-common pkg-config gnome-themes-standard fuse'
       - name: configure in docker
         run: docker exec uu sh -c 'cd /code && ./configure --prefix=/usr'
       - name: make in docker
@@ -164,7 +166,9 @@ jobs:
       - name: make install in docker
         run: docker exec uu sh -c 'cd /code && touch documentation/user-manual/manual.pdf && make install DESTDIR=/dist'
       - name: copy things to dist in docker
-        run: docker exec uu sh -c 'install -d /dist/usr/lib/gtk-2.0 && cp -va $(pkg-config --variable=libdir gtk+-2.0)/gtk-2.0/$(pkg-config --variable=gtk_binary_version gtk+-2.0)/* /dist/usr/lib/gtk-2.0'
+        run: |
+          docker exec uu sh -c 'install -d /dist/usr/lib/gtk-2.0 && cp -va $(pkg-config --variable=libdir gtk+-2.0)/gtk-2.0/$(pkg-config --variable=gtk_binary_version gtk+-2.0)/* /dist/usr/lib/gtk-2.0'
+          docker exec uu sh -c 'cp -va $(pkg-config --variable=libdir gtk+-2.0)/gtk-2.0/modules /dist/usr/lib/gtk-2.0/'
       - name: build appimage in docker
         run: |
           wget -q https://github.com/linuxdeploy/linuxdeploy/releases/download/continuous/linuxdeploy-x86_64.AppImage
@@ -193,7 +197,7 @@ jobs:
           echo "archive=$archive" >> "$GITHUB_OUTPUT"
           echo "appimage is <$archive>"
       - name: Release
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2
         with:
           files: ${{ steps.dist.outputs.archive }}
           draft: true
